# notebprojects

./: .gitignore  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_widget_py.html
src/: decorators.py  external_api.py  file1.py  generators.py  masks.py  my_log.txt  processing.py  utils.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
tests/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_a93514325f4c9f71___init___py.html  z_a93514325f4c9f71_generators_py.html  z_a93514325f4c9f71_masks_py.html  z_a93514325f4c9f71_processing_py.html  z_a93514325f4c9f71_widget_py.html
